fixed sign in dropdown being overlapping

--- a/frontend/src/components/navigation/Navigation.css
+++ b/frontend/src/components/navigation/Navigation.css
@@ -101,8 +101,17 @@
   color: white;
   border: none;
   outline: none;
-  padding: 8px;
+  padding: 11px;
   cursor: pointer;
+}
+
+.dropbtnLoggedOut {
+    background: none;
+      color: white;
+      border: none;
+      outline: none;
+      padding: 23px;
+      cursor: pointer;
 }
 
 
@@ -136,7 +145,20 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: 150px;
+  right: -1px;
+  width: 154px;
+  height: 130px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1100;
+  margin-top: 10px;
+}
+
+.dropdownContentLoggedOut {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  right: -1px;
+  width: 143px;
   height: 130px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1100;
@@ -144,6 +166,10 @@
 }
 
 .dropdown:hover .dropdownContent {
+  display: block;
+}
+
+.dropdown:hover .dropdownContentLoggedOut {
   display: block;
 }
 
